--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Wizard Scoreboard</string>
   <string name="buttonGameBid">Bid</string>
   <string name="buttonGameTricks">Tricks</string>
+  <string name="okay">OK</string>
+  <string name="cancel">Cancel</string>
 </resources>
