--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
   <string name="cancel">Cancel</string>
   <string name="dialog_tricks_title">Add Tricks</string>
   <string name="dialog_bid_title">Add Bids</string>
+
+
+  <string name="roboto_regular">sans-serif</string>
+  <string name="roboto_light">sans-serif-light</string>
+  <string name="roboto_condensed">sans-serif-condensed</string>
+  <string name="roboto_thin">sans-serif-thin</string>
+  <string name="roboto_medium">sans-serif-medium</string>
+
+  <string name="number_picker_formatter">%02d</string>
 </resources>
