better dummy data game list recyclerview gets properly updated after an item was edited in editing tricks dialog the old values get properly preset

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
   <string name="buttonGameTricks">Tricks</string>
   <string name="okay">OK</string>
   <string name="cancel">Cancel</string>
-  <string name="dialog_tricks_title">Add Tricks</string>
-  <string name="dialog_bid_title">Add Bids</string>
+  <string name="dialog_edit_tricks_title">Edit Tricks</string>
+  <string name="dialog_add_tricks_title">Add Tricks</string>
+  <string name="dialog_edit_bid_title">Edit Bids</string>
+  <string name="dialog_add_bid_title">Add Bids</string>
 
 
   <string name="roboto_regular">sans-serif</string>
@@ -20,4 +22,5 @@
   <string name="player_name">Name</string>
   <string name="dialog_add_player_title">Add Player</string>
   <string name="dialog_edit_player_title">Edit Player</string>
+  <string name="round">Round</string>
 </resources>
