--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
   <string name="app_name">Wizard Scoreboard</string>
-  <string name="buttonGameBid">Bid</string>
+  <string name="buttonGameBids">Bids</string>
   <string name="buttonGameTricks">Tricks</string>
 
   <string name="okay">OK</string>
