--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
   <string name="player_amount">Please select 4 to 6 players.</string>
   <string name="no_game_found">No game found!</string>
   <string name="edit">Edit</string>
+  <string name="dialog_delete_player">If the player is deleted, all games in which he is involved will also be deleted. Are you sure?</string>
 </resources>
